// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CampaignActionsBar edit mode 1`] = `
<div
  className="d-flex mb-2"
>
  <h2
    className="m-0"
  >
    <Memo(ImageAutoAdjustIcon)
      className="icon-inline mr-2 text-success"
    />
    <span>
      <AnchorLink
        to="/campaigns"
      >
        Campaigns
      </AnchorLink>
    </span>
    <span
      className="text-muted d-inline-block mx-2"
    >
      /
    </span>
    <span>
      Super campaign
    </span>
  </h2>
  <span
    className="flex-grow-1 d-flex justify-content-end align-items-center"
  >
    <React.Fragment>
      <button
        className="btn btn-primary mr-1"
        disabled={false}
        type="submit"
      >
        Save
      </button>
      <button
        className="btn btn-secondary"
        disabled={false}
        type="reset"
      >
        Cancel
      </button>
    </React.Fragment>
  </span>
</div>
`;

exports[`CampaignActionsBar editable 1`] = `
<div
  className="d-flex mb-2"
>
  <h2
    className="m-0"
  >
    <Memo(ImageAutoAdjustIcon)
      className="icon-inline mr-2 text-success"
    />
    <span>
      <AnchorLink
        to="/campaigns"
      >
        Campaigns
      </AnchorLink>
    </span>
    <span
      className="text-muted d-inline-block mx-2"
    >
      /
    </span>
    <span>
      Super campaign
    </span>
  </h2>
  <span
    className="flex-grow-1 d-flex justify-content-end align-items-center"
  >
    <React.Fragment>
      <button
        className="btn btn-secondary mr-1"
        disabled={false}
        id="e2e-campaign-edit"
        onClick={[Function]}
        type="button"
      >
        Edit
      </button>
      <CloseDeleteCampaignPrompt
        buttonClassName="btn-secondary mr-1"
        buttonText="Close"
        changesetsCount={0}
        disabled={false}
        disabledTooltip="Cannot close while campaign is being created"
        message={
          <p>
            Close campaign 
            <strong>
              Super campaign
            </strong>
            ?
          </p>
        }
        onButtonClick={[Function]}
      />
      <CloseDeleteCampaignPrompt
        buttonClassName="btn-danger"
        buttonText="Delete"
        changesetsCount={0}
        disabled={false}
        disabledTooltip="Cannot delete while campaign is being created"
        message={
          <p>
            Delete campaign 
            <strong>
              Super campaign
            </strong>
            ?
          </p>
        }
        onButtonClick={[Function]}
      />
    </React.Fragment>
  </span>
</div>
`;

exports[`CampaignActionsBar editable but closed 1`] = `
<div
  className="d-flex mb-2"
>
  <h2
    className="m-0"
  >
    <Memo(ImageAutoAdjustIcon)
      className="icon-inline mr-2 text-danger"
    />
    <span>
      <AnchorLink
        to="/campaigns"
      >
        Campaigns
      </AnchorLink>
    </span>
    <span
      className="text-muted d-inline-block mx-2"
    >
      /
    </span>
    <span>
      Super campaign
    </span>
  </h2>
  <span
    className="flex-grow-1 d-flex justify-content-end align-items-center"
  >
    <React.Fragment>
      <button
        className="btn btn-secondary mr-1"
        disabled={false}
        id="e2e-campaign-edit"
        onClick={[Function]}
        type="button"
      >
        Edit
      </button>
      <CloseDeleteCampaignPrompt
        buttonClassName="btn-danger"
        buttonText="Delete"
        changesetsCount={0}
        disabled={false}
        disabledTooltip="Cannot delete while campaign is being created"
        message={
          <p>
            Delete campaign 
            <strong>
              Super campaign
            </strong>
            ?
          </p>
        }
        onButtonClick={[Function]}
      />
    </React.Fragment>
  </span>
</div>
`;

exports[`CampaignActionsBar mode: closing 1`] = `
<div
  className="d-flex mb-2"
>
  <h2
    className="m-0"
  >
    <Memo(ImageAutoAdjustIcon)
      className="icon-inline mr-2 text-success"
    />
    <span>
      <AnchorLink
        to="/campaigns"
      >
        Campaigns
      </AnchorLink>
    </span>
    <span
      className="text-muted d-inline-block mx-2"
    >
      /
    </span>
    <span>
      Super campaign
    </span>
  </h2>
  <span
    className="flex-grow-1 d-flex justify-content-end align-items-center"
  >
    <LoadingSpinner
      className="mr-2"
    />
    <React.Fragment>
      <button
        className="btn btn-secondary mr-1"
        disabled={true}
        id="e2e-campaign-edit"
        onClick={[Function]}
        type="button"
      >
        Edit
      </button>
      <CloseDeleteCampaignPrompt
        buttonClassName="btn-secondary mr-1"
        buttonText="Close"
        changesetsCount={0}
        disabled={true}
        disabledTooltip="Cannot close while campaign is being created"
        message={
          <p>
            Close campaign 
            <strong>
              Super campaign
            </strong>
            ?
          </p>
        }
        onButtonClick={[Function]}
      />
      <CloseDeleteCampaignPrompt
        buttonClassName="btn-danger"
        buttonText="Delete"
        changesetsCount={0}
        disabled={true}
        disabledTooltip="Cannot delete while campaign is being created"
        message={
          <p>
            Delete campaign 
            <strong>
              Super campaign
            </strong>
            ?
          </p>
        }
        onButtonClick={[Function]}
      />
    </React.Fragment>
  </span>
</div>
`;

exports[`CampaignActionsBar mode: deleting 1`] = `
<div
  className="d-flex mb-2"
>
  <h2
    className="m-0"
  >
    <Memo(ImageAutoAdjustIcon)
      className="icon-inline mr-2 text-success"
    />
    <span>
      <AnchorLink
        to="/campaigns"
      >
        Campaigns
      </AnchorLink>
    </span>
    <span
      className="text-muted d-inline-block mx-2"
    >
      /
    </span>
    <span>
      Super campaign
    </span>
  </h2>
  <span
    className="flex-grow-1 d-flex justify-content-end align-items-center"
  >
    <LoadingSpinner
      className="mr-2"
    />
    <React.Fragment>
      <button
        className="btn btn-secondary mr-1"
        disabled={true}
        id="e2e-campaign-edit"
        onClick={[Function]}
        type="button"
      >
        Edit
      </button>
      <CloseDeleteCampaignPrompt
        buttonClassName="btn-secondary mr-1"
        buttonText="Close"
        changesetsCount={0}
        disabled={true}
        disabledTooltip="Cannot close while campaign is being created"
        message={
          <p>
            Close campaign 
            <strong>
              Super campaign
            </strong>
            ?
          </p>
        }
        onButtonClick={[Function]}
      />
      <CloseDeleteCampaignPrompt
        buttonClassName="btn-danger"
        buttonText="Delete"
        changesetsCount={0}
        disabled={true}
        disabledTooltip="Cannot delete while campaign is being created"
        message={
          <p>
            Delete campaign 
            <strong>
              Super campaign
            </strong>
            ?
          </p>
        }
        onButtonClick={[Function]}
      />
    </React.Fragment>
  </span>
</div>
`;

exports[`CampaignActionsBar mode: saving 1`] = `
<div
  className="d-flex mb-2"
>
  <h2
    className="m-0"
  >
    <Memo(ImageAutoAdjustIcon)
      className="icon-inline mr-2 text-success"
    />
    <span>
      <AnchorLink
        to="/campaigns"
      >
        Campaigns
      </AnchorLink>
    </span>
    <span
      className="text-muted d-inline-block mx-2"
    >
      /
    </span>
    <span>
      Super campaign
    </span>
  </h2>
  <span
    className="flex-grow-1 d-flex justify-content-end align-items-center"
  >
    <LoadingSpinner
      className="mr-2"
    />
    <React.Fragment>
      <button
        className="btn btn-primary mr-1"
        disabled={true}
        type="submit"
      >
        Save
      </button>
      <button
        className="btn btn-secondary"
        disabled={true}
        type="reset"
      >
        Cancel
      </button>
    </React.Fragment>
  </span>
</div>
`;

exports[`CampaignActionsBar not editable 1`] = `
<div
  className="d-flex mb-2"
>
  <h2
    className="m-0"
  >
    <Memo(ImageAutoAdjustIcon)
      className="icon-inline mr-2 text-success"
    />
    <span>
      <AnchorLink
        to="/campaigns"
      >
        Campaigns
      </AnchorLink>
    </span>
    <span
      className="text-muted d-inline-block mx-2"
    >
      /
    </span>
    <span>
      Super campaign
    </span>
  </h2>
  <span
    className="flex-grow-1 d-flex justify-content-end align-items-center"
  />
</div>
`;

exports[`CampaignActionsBar processing 1`] = `
<div
  className="d-flex mb-2"
>
  <h2
    className="m-0"
  >
    <Memo(ImageAutoAdjustIcon)
      className="icon-inline mr-2 text-success"
    />
    <span>
      <AnchorLink
        to="/campaigns"
      >
        Campaigns
      </AnchorLink>
    </span>
    <span
      className="text-muted d-inline-block mx-2"
    >
      /
    </span>
    <span>
      Super campaign
    </span>
  </h2>
  <span
    className="flex-grow-1 d-flex justify-content-end align-items-center"
  >
    <React.Fragment>
      <button
        className="btn btn-primary mr-1"
        disabled={false}
        type="submit"
      >
        Save
      </button>
      <button
        className="btn btn-secondary"
        disabled={false}
        type="reset"
      >
        Cancel
      </button>
    </React.Fragment>
  </span>
</div>
`;
